<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/logo_r_sinfondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="170dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth="170dp"
        app:tint="@color/white" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvPastel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPastel"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/pastel"
                app:layout_constraintHeight="90dp"
                app:layout_constraintWidth="90dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PastelTitle"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/lblCantidad"
                        android:textColor="@color/white" />


                    <EditText
                        android:id="@+id/txtPastel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:width="50dp"
                        android:backgroundTint="@color/white"
                        android:inputType="number"
                        android:textColor="@color/white"

                        />

                </LinearLayout>


                <TextView
                    android:id="@+id/Pastelsubtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/PastePrice"
                    android:textColor="@color/white" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvCazuela"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPastel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/cazuela"
                app:layout_constraintHeight="120dp"
                app:layout_constraintWidth="120dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CazuelaTitle"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblCantidad"
                        android:textColor="@color/white" />


                    <EditText
                        android:id="@+id/txtCazuela"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="50dp"
                        android:backgroundTint="@color/white"
                        android:inputType="number"
                        android:textColor="@color/white" />

                </LinearLayout>


                <TextView
                    android:id="@+id/cazuelaSubtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/CazuelaPrice"
                    android:textColor="@color/white" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvCazuela"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/background_component"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_margin="12dp"
            >


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchPropina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.205"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.487" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblComida"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblPropina"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblTotal"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                >

                <TextView
                    android:id="@+id/valComida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valComida"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/valPropina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valPropina"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/valTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valTotal"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>